# aiml_newsletter_embedder

./: .gitignore  Dockerfile  api_collection.json  docker-compose.yaml  docker-compose.yml  email_fetcher.py  load_data.sh  main.py  pyproject.toml  readme.md
newsletter_processor/: __init__.py  content_splitter.py  email_fetcher.py  newsletter_processor.py  newsletter_schema.py  query_weaviate.py  weaviate_load.py
newsletter_processor/api/: models.py
newsletter_processor/api/routes/: __init__.py  admin.py  search.py
newsletter_processor/core/: app.py  config.py  logging.py
newsletter_processor/services/: scheduler.py
newsletter_processor/services/email/: content_splitter.py  email_fetcher.py  newsletter_processor.py
newsletter_processor/services/weaviate/: client.py  loader.py  newsletter_schema.py  query.py
scripts/: healthcheck.sh  setup.sh  start.sh
